jumping anchors and main padding fixed

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,10 @@ body {
   overflow-x: clip;
 }
 
+main {
+  padding: 0 15px;
+}
+
 #prices,
 #partners {
   box-shadow: none;
